# puzzlechum

./: .gitignore  PKGBUILD  README.md  justfile  new_problem  newproblem  pyproject.toml  runtest  toclipboard
puzzlechum/: chum.py  find_problems_root.py  newproblem.py  runtest.py
puzzlechum/puzzlechum_rolf_sievert/: chum.py
puzzlechum/puzzlechum_rolf_sievert/templates/: template.rs
puzzlechum/templates/: template.py
src/puzzlechum_rolf_sievert/: newproblem.py  runtest.py
